Feature of csv import removed.
