# src/AppBundle/Controller/v1/ElevatorController.php
@@ -9,7 +9,6 @@ use Sensio\Bundle\FrameworkExtraBundle\Configuration\Route;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Method;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Security;
 use Symfony\Component\HttpFoundation\Request;
-use AppBundle\Util\Csv;
 
 /**
  * @Route("/elevators")
@@ -26,22 +25,5 @@ class ElevatorController extends BaseController
         return $this->json(
             $this->getDoctrine()->getRepository('AppBundle:Elevator')->findAll()
         );
-    }
-
-    /**
-     * @Security("has_role('ROLE_V1_ELEVATOR_IMPORT_CSV')")
-     * @Route("/import/csv", name="v1_elevator_import_csv")
-     * @Method("POST")
-     */
-    public function importCsvAction(Request $request)
-    {
-        $mandatoryHeaders = ['id', 'code', 'station_id', 'station_name', 'human_location', 'direction', 'source_name'];
-        try {
-            $csv = Csv::parse($request->getContent(), $mandatoryHeaders);
-        } catch (\InvalidArgumentException $e) {
-            throw new BadRequestException($e->getMessage());
-        }
-
-        return $this->json($this->getDoctrine()->getRepository(Elevator::class)->importFromCsv($csv));
     }
 }
